{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 89,
  "lineage": "3b57be32-d4a7-7e7f-659d-fb1dcf631859",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "artifactory",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d73c05040ee827f7",
            "arn": "arn:aws:ec2:us-east-2:945174976979:instance/i-0a8a680474ce408cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a8a680474ce408cb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkp",
            "monitoring": false,
            "primary_network_interface_id": "eni-085979f26398056c9",
            "private_dns": "ip-10-0-33-67.us-east-2.compute.internal",
            "private_ip": "10.0.33.67",
            "public_dns": "ec2-13-58-193-157.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.193.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0706f57d914182f60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-098cb43d61c9685b6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f41b75363a579db",
            "tags": {
              "Name": "arifactory"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-098cb43d61c9685b6"
            ]
          },
          "depends_on": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ci",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d73c05040ee827f7",
            "arn": "arn:aws:ec2:us-east-2:945174976979:instance/i-0f83b06f6eaf44736",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f83b06f6eaf44736",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkp",
            "monitoring": false,
            "primary_network_interface_id": "eni-0dd9983a455b93cef",
            "private_dns": "ip-10-0-57-40.us-east-2.compute.internal",
            "private_ip": "10.0.57.40",
            "public_dns": "ec2-3-15-228-21.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.228.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b9ede21e23b55a8e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-098cb43d61c9685b6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f41b75363a579db",
            "tags": {
              "Name": "ci"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-098cb43d61c9685b6"
            ]
          },
          "depends_on": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devtools",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d73c05040ee827f7",
            "arn": "arn:aws:ec2:us-east-2:945174976979:instance/i-07a7da1b256d088a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07a7da1b256d088a7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkp",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b239f26e7feee1fd",
            "private_dns": "ip-10-0-60-129.us-east-2.compute.internal",
            "private_ip": "10.0.60.129",
            "public_dns": "ec2-18-191-171-109.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.171.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-048af74b6af5c94f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-098cb43d61c9685b6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f41b75363a579db",
            "tags": {
              "Name": "devtools"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-098cb43d61c9685b6"
            ]
          },
          "depends_on": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "qa",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d73c05040ee827f7",
            "arn": "arn:aws:ec2:us-east-2:945174976979:instance/i-0904b1f90c50e6ac7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0904b1f90c50e6ac7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkp",
            "monitoring": false,
            "primary_network_interface_id": "eni-04f0a6951ac5f26d7",
            "private_dns": "ip-10-0-52-205.us-east-2.compute.internal",
            "private_ip": "10.0.52.205",
            "public_dns": "ec2-13-59-172-138.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.172.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-053a4f215c6ce69b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-098cb43d61c9685b6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f41b75363a579db",
            "tags": {
              "Name": "qa"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-098cb43d61c9685b6"
            ]
          },
          "depends_on": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-env-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0719cd08440162205",
            "owner_id": "945174976979",
            "vpc_id": "vpc-0753a52a995d44ccd"
          },
          "depends_on": [
            "aws_vpc.dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-dev-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0af04d1aacd8c53c0",
            "owner_id": "945174976979",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0719cd08440162205",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0753a52a995d44ccd"
          },
          "depends_on": [
            "aws_internet_gateway.dev-env-gw",
            "aws_vpc.dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1b76d387bcd0efa",
            "route_table_id": "rtb-0af04d1aacd8c53c0",
            "subnet_id": "subnet-06f41b75363a579db"
          },
          "depends_on": [
            "aws_route_table.route-table-dev-env",
            "aws_subnet.subnet-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945174976979:security-group/sg-098cb43d61c9685b6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098cb43d61c9685b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": null,
            "owner_id": "945174976979",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0753a52a995d44ccd"
          },
          "depends_on": [
            "aws_vpc.dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945174976979:subnet/subnet-06f41b75363a579db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-06f41b75363a579db",
            "map_public_ip_on_launch": true,
            "owner_id": "945174976979",
            "vpc_id": "vpc-0753a52a995d44ccd"
          },
          "depends_on": [
            "aws_vpc.dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945174976979:vpc/vpc-0753a52a995d44ccd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0208f7471dcb4426f",
            "default_route_table_id": "rtb-08cd473cb7359d55c",
            "default_security_group_id": "sg-0fe779adecc2f9c2a",
            "dhcp_options_id": "dopt-0e6b9965",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0753a52a995d44ccd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08cd473cb7359d55c",
            "owner_id": "945174976979"
          }
        }
      ]
    }
  ]
}